[package]
name = "battlesnake-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
lazy_static = "1.4.0"
anyhow = "1.0.57"
rand = "0.8.5"
chrono = "0.4.19"
actix-web = "4.0.0"
